# ASI-ML-2025-zespol

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.api.txt
AutogluonModels/ag-20251119_185801/: learner.pkl
AutogluonModels/ag-20251119_185801/models/: trainer.pkl
AutogluonModels/ag-20251119_190017/: learner.pkl  metadata.json
AutogluonModels/ag-20251119_190017/models/: trainer.pkl
AutogluonModels/ag-20251119_191139/: learner.pkl
AutogluonModels/ag-20251119_191139/models/: trainer.pkl
AutogluonModels/ag-20251120_205746/: learner.pkl
AutogluonModels/ag-20251121_074123/: learner.pkl
AutogluonModels/ag-20251121_075133/: learner.pkl
AutogluonModels/ag-20251121_075359/: learner.pkl
conf/base/: catalog.yml  parameters.yml  parameters_data_preparation.yml
conf/local/: credentials.yml
data/01_raw/: airbnb_sample.csv
data/02_interim/: airbnb_cleaned.csv  clean.parquet
data/03_processed/: X_test.parquet  X_train.parquet  y_test.parquet  y_train.parquet
docs/: model_card.md
notebooks/: 01_eda.ipynb  02_baseline_ml.ipynb
src/: __init__.py
src/api/: main.py  model_loader.py
src/asi_airbnb/: settings.py
src/asi_ml_2025_zespol/: __init__.py  __main__.py
src/core/: settings.py
src/db/: database.py
src/ui/: app.py
tests/: test_api.py  test_nodes.py
wandb/run-20251029_153225-5y247p9v/: run-5y247p9v.wandb
wandb/run-20251029_154217-ud4onvnp/: run-ud4onvnp.wandb
wandb/run-20251029_163521-k49znxk9/: run-k49znxk9.wandb
wandb/run-20251029_165200-mwfyzppa/: run-mwfyzppa.wandb
(+217 files in other folders)
