[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "ASI-ML-2025-zespol"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
asi-airbnb = "ASI-ML-2025-zespol.__main__:main"

[tool.kedro]
package_name = "ASI-ML-2025-zespol"
project_name = "ASI-ML-2025-zespol"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "ASI-ML-2025-zespol.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "67f1e479802f4cf59f5ad545bb351369"
